# anim_svg

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  brain.md  pubspec.yaml  pubspec_overrides.yaml
.github/workflows/: release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/zharume/anim_svg/: AnimSvgPlugin.kt
android/src/test/kotlin/com/zharume/anim_svg/: AnimSvgPluginTest.kt
brain/: README.md  adr.md  feature_map.md  glossary.md  knowledge.md  perf_baseline_2026-04-29.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/zharume/anim_svg_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  perf_overlay.dart
example/test/: widget_test.dart
ios/: anim_svg.podspec
ios/Classes/: AnimSvgFFIKeep.m  AnimSvgKeepAlive.c  AnimSvgPlugin.swift
lib/: anim_svg.dart  anim_svg_method_channel.dart  anim_svg_platform_interface.dart
lib/src/core/: errors.dart  logger.dart  result.dart
lib/src/data/cache/: lottie_cache_manager.dart
lib/src/data/ffi/: anim_svg_core_bindings.dart  rust_convert_envelope.dart  rust_converter.dart
lib/src/data/mappers/: animation_normalizer.dart  display_mapper.dart  image_asset_builder.dart  keyspline_mapper.dart  motion_path_resolver.dart  nested_animation_classifier.dart  opacity_mapper.dart  opacity_merge.dart  raster_transcoder.dart  shape_mapper.dart  svg_to_lottie_mapper.dart  transform_mapper.dart  use_flattener.dart
lib/src/data/network/: network_svg_loader.dart
lib/src/data/parsers/: data_uri_decoder.dart  svg_animation_parser.dart  svg_css_parser.dart  svg_parser.dart  svg_path_data_parser.dart  svg_svgator_parser.dart  svg_transform_parser.dart
lib/src/data/serializers/: lottie_serializer.dart
lib/src/domain/entities/: lottie_animation.dart  svg_animation.dart  svg_document.dart  svg_motion_path.dart  svg_transform.dart
lib/src/domain/usecases/: convert_svg_to_lottie.dart
lib/src/presentation/: anim_svg_controller.dart  anim_svg_widget.dart
native/anim_svg_core/: Cargo.toml  README.md  build.rs  cbindgen.toml
native/anim_svg_core/.cargo/: config.toml
native/anim_svg_core/include/: anim_svg_core.h
native/anim_svg_core/src/: envelope.rs  error.rs  ffi.rs  lib.rs  log.rs
native/anim_svg_core/src/domain/: lottie.rs  mod.rs  svg.rs  svg_anim.rs  svg_motion_path.rs  svg_transform.rs
native/anim_svg_core/src/map/: display.rs  image_asset.rs  keyspline.rs  mod.rs  motion_path.rs  nested_anim.rs  normalize.rs  opacity.rs  opacity_merge.rs  raster_transcoder.rs  shape.rs  svg_to_lottie.rs  transform_map.rs  use_flatten.rs
native/anim_svg_core/src/parse/: animation.rs  css.rs  data_uri.rs  mod.rs  path_data.rs  svgator.rs  transform.rs  xml.rs
native/anim_svg_core/src/serialize/: lottie.rs  mod.rs
native/anim_svg_core/src/validate/: mod.rs  positions.rs
native/anim_svg_core/tests/: domain_serialize.rs  dump_anim_5.rs  example_svgs.rs  ffi_smoke.rs
test/ffi/: rust_converter_smoke_test.dart
test/integration/: svgator_pipeline_test.dart
test/network/: network_svg_loader_test.dart
test/parity/: rust_parity_test.dart
test/unit/mappers/: animation_normalizer_test.dart  color_pulse_effect_test.dart  filter_effect_test.dart  keyspline_mapper_test.dart  motion_path_resolver_test.dart  negative_scale_test.dart  nested_animation_parenting_test.dart  opacity_display_merge_test.dart  pivoted_rotation_bake_test.dart  saturation_effect_test.dart  shape_mapper_gradient_test.dart  shape_mapper_test.dart  svg_to_lottie_mapper_static_test.dart  transform_mapper_test.dart  use_flattener_test.dart
test/unit/parsers/: svg_css_parser_test.dart  svg_parser_test.dart  svg_path_data_parser_test.dart  svg_svgator_parser_test.dart  svg_transform_parser_test.dart  transform_origin_test.dart
test/unit/serializers/: lottie_serializer_test.dart
test/widget/: anim_svg_view_network_test.dart
thorvg.flutter/: .gitignore  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
thorvg.flutter/android/: CMakeLists.txt  build.gradle  config.h
thorvg.flutter/android/src/main/cpp/: gl_context.cpp  gl_context.h  jni_bridge.cpp
thorvg.flutter/android/src/main/kotlin/com/robotoss/thorvg_plus/: ThorvgPlusPlugin.kt  ThorvgTexture.kt
thorvg.flutter/example/: pubspec.yaml
thorvg.flutter/example/lib/: main.dart
thorvg.flutter/ios/: .gitignore  config.h  thorvg.podspec  thorvg_plus.podspec
thorvg.flutter/ios/Classes/: AngleRenderContext.h  AngleRenderContext.mm  ThorvgBridge.h  ThorvgBridge.mm  ThorvgFFIKeep.m  ThorvgPlusPlugin.swift  ThorvgTexture.swift
thorvg.flutter/ios/plugin_src/: tvgFlutterLottieAnimation.h
thorvg.flutter/lib/: thorvg.dart
thorvg.flutter/lib/src/: lottie.dart  thorvg.dart  thorvg_controller.dart
thorvg.flutter/src/: tvgFlutterLottieAnimation.cpp  tvgFlutterLottieAnimation.h
thorvg.flutter/tool/: prune_thorvg.sh
tool/: build_rust.sh  build_rust_android.sh  build_rust_ios.sh  download_prebuilt.sh  prepare_rust.sh  publish_thorvg_plus.sh
