[package]
name = "anim_svg_core"
version = "0.1.0"
edition = "2021"
description = "Native SVG → Lottie converter for the anim_svg Flutter package"
license = "MIT"

[lib]
name = "anim_svg_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
