[package]
name = "anim_svg_core"
version = "0.1.1"
edition = "2021"
description = "Native SVG → Lottie converter for the anim_svg Flutter package"
license = "MIT"

[lib]
name = "anim_svg_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
svgtypes = "0.15"
base64 = "0.22"
regex = "1"
once_cell = "1"
# `webp` + `png` are the only formats we transcode (thorvg ships PNG/JPG
# loaders only). default-features=false keeps the dylib lean.
image = { version = "0.25", default-features = false, features = ["webp", "png"] }

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
